tests/type_errors/resflatmap_wrong_return.nos
# expect_error: type mismatch
# resFlatMap lambda must return Result, not raw value
main() = Ok(42).resFlatMap(x => x + 1)
